--- a/project/pp.css
+++ b/project/pp.css
@@ -15,8 +15,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #000000;
+  background-color: #000000;
     padding: 10px 20px;
+  flex-direction: column;
+
+
+    
   }
   
   .logo {
