--- a/project/input.css
+++ b/project/input.css
@@ -89,6 +89,7 @@ section {
     button {
         font-size: 0.9rem;
         padding: 8px 16px;
+        
     }
 }
 
@@ -97,10 +98,12 @@ section {
    margin-bottom: 10px;
    border: 5px solid #000;
    overflow: hidden;
-   
+
+
 }
 .puppy-care:hover{
    
+   transition: transform 0.8s;
    
 
 }
