--- a/project/pp.css
+++ b/project/pp.css
@@ -15,12 +15,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-  background-color: #000000;
+    background-color: #000000;
     padding: 10px 20px;
-  flex-direction: column;
-
-
-    
   }
   
   .logo {
@@ -29,11 +25,9 @@
   }
   
   .logo-img {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     margin-right: 10px;
-    border-radius: 50px;
-    margin-left: 40px;
   }
   
   .logo-text {
@@ -61,8 +55,7 @@
   }
   
   .nav-links a:hover {
-    background-color: #ffffff;
-    color: black;
+    background-color: #ff9900;
   }
   
   /* Section Styles */
